--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,7 @@ dmypy.json
 cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm+all
+
+# poetry settings
+poetry.lock
+pyproject.toml
